--- a/ocarina2/rendering/templates/default/resources/style.css
+++ b/ocarina2/rendering/templates/default/resources/style.css
@@ -17,3 +17,4 @@ html{height:100%;width:100%;}
 .titolo{color:#2370B6;text-align:center;font-weight:bold;font-size:11pt;width:100%;}
 .newstitle{color:#2370B6;text-align:center;font-weight:bold;font-size:11pt;width:100%;}
 .spoiler{display:none;height:auto;border:1px dashed white;margin-top:2px;margin-left:2px;padding:2px;}
+.preview{display:none;height:auto;border:1px dashed white;margin-top:2px;margin-left:2px;padding:2px;}
