--- a/ocarina2/rendering/templates/default/resources/style.css
+++ b/ocarina2/rendering/templates/default/resources/style.css
@@ -19,3 +19,4 @@ html{height:100%;width:100%;}
 .spoiler{display:none;height:auto;border:1px dashed white;margin-top:2px;margin-left:2px;padding:2px;}
 .preview{display:none;height:auto;border:1px dashed white;margin-top:2px;margin-left:2px;padding:2px;}
 .no-prop{text-decoration:none;color:#2370B6;} /* Per i tag a che devono assumere il colore del testo. */
+#no-prop{text-decoration:none;color:#2370B6;}
