--- a/repository/templates/razor/resources/style.css
+++ b/repository/templates/razor/resources/style.css
@@ -14,7 +14,7 @@
 *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 body {
-	color: white;
+	color: #fff;
 	background: url('images/background.jpg') 50% -100px fixed no-repeat #1c1d26;
 	font-family: Tahoma, Verdana, Arial, Sans-serif;
 }
@@ -29,10 +29,10 @@ a:visited {
 }
 
 a:hover, a:active, .alt a:hover {
-	color: white;
+	color: #fff;
 }
 
-.alt a, .alt a:visited, .alt a:active {
+.alt a, .alt a:active {
 	text-decoration: none;
 	color: #666;
 }
@@ -49,7 +49,7 @@ a:hover, a:active, .alt a:hover {
 	text-align: right;
 }
 
-input[type="submit"] {
+input[type="submit"], input[type="button"] {
 	padding: 4px;
 	border: 1px solid #bbb;
 }
@@ -59,8 +59,47 @@ select {
 	border: 1px solid #bbb;
 }
 
-/* From screen.css */
+h1, h2, h3, h4, h5, h6 {
+	margin-bottom: 1px;
+	color: #fff;
+}
+
+h4 {
+	font-size:1em;
+	font-weight: bold;
+}
+
+/* Ocarina's tag */
+/* `blockquote` is a courtesy of css-tricks.com */
+blockquote {
+	background:#f9f9f9;
+	border-left:10px solid #ccc;
+	margin:1.5em 10px;
+	padding:.5em 10px;
+	quotes:"\201C""\201D""\2018""\2019";
+	padding-bottom: -8px;
+	margin-bottom: -8px;
+}
+blockquote:before {
+	color:#ccc;
+	content:open-quote;
+	font-size:4em;
+	line-height:.1em;
+	margin-right:.25em;
+	vertical-align:-.4em;
+}
+blockquote p {
+	display:inline;
+}
+.spoiler{display:none;height:auto;border:1px dashed #fff;margin-top:2px;margin-left:2px;padding:2px;}
+.preview{display:none;height:auto;border:1px dashed #fff;margin-top:2px;margin-left:2px;padding:2px;}
+.no-prop{text-decoration:none;color:#fff;}
+#no-prop{text-decoration:none;color:#fff}
+
+/* Adaptation from screen.css */
 input[type="text"], input[type="password"], textarea, select {margin:0.5em 0;border:1px solid #bbb;}
 input[type="text"]:focus, input[type="password"]:focus, textarea:focus, select:focus {border:1px solid #666;}
 input[type="text"],input[type="password"] {width:300px;padding:5px;}
 textarea {width:390px;height:250px;padding:5px;}
+h2 {color:#666;font-family:"Warnock Pro", "Goudy Old Style","Palatino","Book Antiqua", Georgia, serif;font-style:italic;font-weight:normal;}
+h2 {margin-bottom:-5px;}
